--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "async": "^2.6.1",
     "back": "^1.0.2",
     "body-parser": "^1.18.3",
-    "botbuilder": "git+https://github.com/shimanzhang2000/botkit_copy",
+    "botbuilder": "shimanzhang2000/botkit_copy#master",
     "botkit-studio-sdk": "^1.0.8",
     "chalk": "^2.4.1",
     "ciscospark": "^1.32.23",
